Update docstring of filter/cut functions.

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -57,16 +57,29 @@
     "\n",
     "from ess.nmx.mtz_io import mtz_io_providers, mtz_io_params\n",
     "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
-    "from ess.nmx.scaling import scaling_providers\n",
-    "from ess.nmx.scaling import WavelengthBinSize, WavelengthBinned, ReferenceWavelength\n",
+    "from ess.nmx.scaling import scaling_providers, scaling_params\n",
+    "from ess.nmx.scaling import (\n",
+    "    WavelengthBinSize,\n",
+    "    FilteredEstimatedScaledIntensities,\n",
+    "    ReferenceWavelength,\n",
+    "    WavelengthBinCutProportion,\n",
+    "    NRoot,\n",
+    "    NRootStdDevCut,\n",
+    ")\n",
     "\n",
     "pl = sl.Pipeline(\n",
-    "    providers=mtz_io_providers+scaling_providers,\n",
+    "    providers=mtz_io_providers + scaling_providers,\n",
     "    params={\n",
-    "        SpaceGroupDesc: \"C 1 2 1\",  # Replace with the correct space group if needed\n",
-    "        WavelengthBinSize: 50,  # Replace with the correct bin size if needed\n",
-    "        ReferenceWavelength: sc.scalar(3, unit=sc.units.angstrom),  # Remove it if you want to use the middle of the bin\n",
-    "        **mtz_io_params\n",
+    "        SpaceGroupDesc: \"C 1 2 1\",\n",
+    "        WavelengthBinSize: 500,\n",
+    "        ReferenceWavelength: sc.scalar(\n",
+    "            3, unit=sc.units.angstrom\n",
+    "        ),  # Remove it if you want to use the middle of the bin\n",
+    "        WavelengthBinCutProportion: 0.25,  # 0 < proportion < 0.5\n",
+    "        NRoot: 4,  # Increase this value to effectively remove more outliers on the right tail\n",
+    "        NRootStdDevCut: 1.0,  # Lower this value to remove more outliers\n",
+    "        **mtz_io_params,\n",
+    "        **scaling_params,\n",
     "    },\n",
     ")\n",
     "\n",
@@ -91,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaling_nmx_workflow = pl.get(WavelengthBinned)\n",
+    "scaling_nmx_workflow = pl.get(FilteredEstimatedScaledIntensities)\n",
     "scaling_nmx_workflow.visualize(graph_attr={\"rankdir\": \"LR\"})"
    ]
   },
@@ -108,19 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binned = scaling_nmx_workflow.compute(WavelengthBinned)\n",
-    "binned"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ess.nmx.scaling import get_reference_intensities, estimate_scale_factor_per_hkl_asu_from_reference\n",
-    "\n",
-    "estimate_scale_factor_per_hkl_asu_from_reference(get_reference_intensities(binned))"
+    "scaling_nmx_workflow.compute(FilteredEstimatedScaledIntensities)"
    ]
   }
  ],
