--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -20,6 +20,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from ess.nmx.mtz_io import read_mtz_file, mtz_to_pandas, MTZFilePath\n",
     "from ess.nmx.data import get_small_random_mtz_samples\n",
     "\n",
@@ -54,6 +63,7 @@
    "source": [
     "import sciline as sl\n",
     "import scipp as sc\n",
+    "import numpy as np\n",
     "\n",
     "from ess.nmx.mtz_io import mtz_io_providers, mtz_io_params\n",
     "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
@@ -64,6 +74,7 @@
     "    ReferenceWavelength,\n",
     "    ScaledIntensityLeftTailThreshold,\n",
     "    ScaledIntensityRightTailThreshold,\n",
+    "    InitialGuess,\n",
     ")\n",
     "\n",
     "pl = sl.Pipeline(\n",
@@ -80,6 +91,7 @@
     "        ScaledIntensityRightTailThreshold: sc.scalar(\n",
     "            4.0,  # Decrease it to remove more outliers\n",
     "        ),\n",
+    "        InitialGuess: np.ones(7),\n",
     "        **mtz_io_params,\n",
     "        **scaling_params,\n",
     "    },\n",
@@ -91,7 +103,8 @@
     "    # columns={\n",
     "    #     MTZFilePath: [pathlib.Path(f\"../developer/sample_{i}.mtz\") for i in range(1, 6)]\n",
     "    # },\n",
-    "    row_dim=MTZFileIndex, columns={MTZFilePath: get_small_random_mtz_samples()}\n",
+    "    row_dim=MTZFileIndex,\n",
+    "    columns={MTZFilePath: get_small_random_mtz_samples()},\n",
     ")\n",
     "\n",
     "pl.set_param_table(file_path_table)\n",
@@ -111,7 +124,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaling_nmx_workflow = pl.get(FilteredEstimatedScaledIntensities)\n",
+    "from ess.nmx.scaling import WavelengthScaleFactors\n",
+    "\n",
+    "scaling_nmx_workflow = pl.get(WavelengthScaleFactors)\n",
     "scaling_nmx_workflow.visualize(graph_attr={\"rankdir\": \"LR\"})"
    ]
   },
@@ -128,7 +143,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaling_nmx_workflow.compute(FilteredEstimatedScaledIntensities)"
+    "from ess.nmx.scaling import (\n",
+    "    SelectedReferenceWavelength,\n",
+    "    FittingResult,\n",
+    "    WavelengthScaleFactors,\n",
+    ")\n",
+    "\n",
+    "results = scaling_nmx_workflow.compute(\n",
+    "    (\n",
+    "        FilteredEstimatedScaledIntensities,\n",
+    "        SelectedReferenceWavelength,\n",
+    "        FittingResult,\n",
+    "        WavelengthScaleFactors,\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "results[FilteredEstimatedScaledIntensities]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plots\n",
+    "\n",
+    "Here are plotting examples of the fitting/estimation results.\n",
+    "\n",
+    "### Estimated Scaled Intensities."
    ]
   },
   {
@@ -137,11 +178,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaled = scaling_nmx_workflow.compute(FilteredEstimatedScaledIntensities)\n",
+    "import scipy.stats as stats\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "sc.values(scaled.data).hist(intensities=30).plot(\n",
-    "    grid=True, linewidth=3, title=\"Density Plot of Estimated Scaled Intensities\"\n",
+    "fig, (density_ax, prob_ax) = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "\n",
+    "densities = sc.values(results[FilteredEstimatedScaledIntensities].data).values\n",
+    "sc.values(results[FilteredEstimatedScaledIntensities].data).hist(intensity=50).plot(\n",
+    "    title=\"Filtered Estimated Scaled Intensities\\nDensity Plot\",\n",
+    "    grid=True,\n",
+    "    linewidth=3,\n",
+    "    ax=density_ax,\n",
+    ")\n",
+    "stats.probplot(densities, dist=\"norm\", plot=prob_ax)\n",
+    "prob_ax.set_title(\"Filtered Estimated Scaled Intensities\\nProbability Plot\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Curve Fitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plopp as pp\n",
+    "from ess.nmx.scaling import FittingResult\n",
+    "\n",
+    "chebyshev_func = np.polynomial.chebyshev.Chebyshev(np.array([1, -1, 1]))\n",
+    "scale_function = np.vectorize(\n",
+    "    chebyshev_func / chebyshev_func(results[SelectedReferenceWavelength].value)\n",
+    ")\n",
+    "chevyshev_normed = sc.DataArray(\n",
+    "    data=sc.array(\n",
+    "        dims=[\"wavelength\"],\n",
+    "        values=scale_function(\n",
+    "            results[FittingResult].fit_output.coords[\"wavelength\"].values\n",
+    "        ),\n",
+    "    ),\n",
+    "    coords={\n",
+    "        \"wavelength\": results[FittingResult].fit_output.coords[\"wavelength\"],\n",
+    "    },\n",
+    ")\n",
+    "pp.plot(\n",
+    "    {\n",
+    "        \"Original Data\": results[FilteredEstimatedScaledIntensities],\n",
+    "        \"Fit Result\": results[FittingResult].fit_output,\n",
+    "        \"Chebyshev\": chevyshev_normed,\n",
+    "    },\n",
+    "    grid=True,\n",
+    "    title=\"Fit Result [Intensities vs Wavelength]\",\n",
+    "    marker={\"Chebyshev\": None, \"Fit Result\": None},\n",
+    "    linestyle={\"Chebyshev\": \"solid\", \"Fit Result\": \"solid\"},\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference_wavelength = sc.DataArray(\n",
+    "    data=sc.concat(\n",
+    "        [\n",
+    "            results[WavelengthScaleFactors].data.min(),\n",
+    "            results[WavelengthScaleFactors].data.max(),\n",
+    "        ],\n",
+    "        \"wavelength\",\n",
+    "    ),\n",
+    "    coords={\n",
+    "        \"wavelength\": sc.broadcast(\n",
+    "            results[SelectedReferenceWavelength], dims=[\"wavelength\"], shape=[2]\n",
+    "        )\n",
+    "    },\n",
+    ")\n",
+    "wavelength_scale_factor_plot = pp.plot(\n",
+    "    {\n",
+    "        \"scale_factor\": results[WavelengthScaleFactors],\n",
+    "        \"reference_wavelength\": reference_wavelength,\n",
+    "    },\n",
+    "    title=\"Wavelength Scale Factors\",\n",
+    "    grid=True,\n",
+    "    marker={\"reference_wavelength\": None},\n",
+    "    linestyle={\"reference_wavelength\": \"solid\"},\n",
+    ")\n",
+    "wavelength_scale_factor_plot.ax.set_xlim(2.8, 3.2)\n",
+    "reference_wavelength = results[SelectedReferenceWavelength].value\n",
+    "wavelength_scale_factor_plot.ax.text(\n",
+    "    3.0,\n",
+    "    0.25,\n",
+    "    f\"{reference_wavelength=:} [{results[SelectedReferenceWavelength].unit}]\",\n",
+    "    fontsize=8,\n",
+    "    color=\"black\",\n",
+    ")\n",
+    "wavelength_scale_factor_plot"
    ]
   },
   {
@@ -151,7 +287,9 @@
     "## Change Provider\n",
     "Here is an example of how to insert different filter function.\n",
     "\n",
-    "In this example, we will swap a provider that filters ``EstimatedScaledIntensities`` and provide ``FilteredEstimatedScaledIntensities``."
+    "In this example, we will swap a provider that filters ``EstimatedScaledIntensities`` and provide ``FilteredEstimatedScaledIntensities``.\n",
+    "\n",
+    "After updating the providers, you can go back to [Compute Desired Type](#Compute-Desired-Type) and start over."
    ]
   },
   {
