Fix typo and simplify fitting function.

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -214,7 +214,7 @@
     "scale_function = np.vectorize(\n",
     "    chebyshev_func / chebyshev_func(results[SelectedReferenceWavelength].value)\n",
     ")\n",
-    "chevyshev_normed = sc.DataArray(\n",
+    "chebyshev_normed = sc.DataArray(\n",
     "    data=sc.array(\n",
     "        dims=[\"wavelength\"],\n",
     "        values=scale_function(\n",
@@ -229,7 +229,7 @@
     "    {\n",
     "        \"Original Data\": results[FilteredEstimatedScaledIntensities],\n",
     "        \"Fit Result\": results[FittingResult].fit_output,\n",
-    "        \"Chebyshev\": chevyshev_normed,\n",
+    "        \"Chebyshev\": chebyshev_normed,\n",
     "    },\n",
     "    grid=True,\n",
     "    title=\"Fit Result [Intensities vs Wavelength]\",\n",
