Use scipp curve_fit.

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -63,7 +63,6 @@
    "source": [
     "import sciline as sl\n",
     "import scipp as sc\n",
-    "import numpy as np\n",
     "\n",
     "from ess.nmx.mtz_io import mtz_io_providers, mtz_io_params\n",
     "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
@@ -91,7 +90,7 @@
     "        ScaledIntensityRightTailThreshold: sc.scalar(\n",
     "            4.0,  # Decrease it to remove more outliers\n",
     "        ),\n",
-    "        InitialGuess: np.ones(7),\n",
+    "        InitialGuess: {f\"param{i+1}\": 1 / (sc.scalar(1, unit=\"angstrom\") ** i) for i in range(7)},\n",
     "        **mtz_io_params,\n",
     "        **scaling_params,\n",
     "    },\n",
@@ -99,10 +98,6 @@
     "\n",
     "\n",
     "file_path_table = sl.ParamTable(\n",
-    "    # row_dim=MTZFileIndex,\n",
-    "    # columns={\n",
-    "    #     MTZFilePath: [pathlib.Path(f\"../developer/sample_{i}.mtz\") for i in range(1, 6)]\n",
-    "    # },\n",
     "    row_dim=MTZFileIndex,\n",
     "    columns={MTZFilePath: get_small_random_mtz_samples()},\n",
     ")\n",
@@ -158,7 +153,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "results[FilteredEstimatedScaledIntensities]"
+    "results[WavelengthScaleFactors]"
    ]
   },
   {
