--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -203,6 +203,7 @@
    "outputs": [],
    "source": [
     "import plopp as pp\n",
+    "import numpy as np\n",
     "from ess.nmx.scaling import FittingResult\n",
     "\n",
     "chebyshev_func = np.polynomial.chebyshev.Chebyshev(np.array([1, -1, 1]))\n",
