--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -64,7 +64,7 @@
     "import sciline as sl\n",
     "import scipp as sc\n",
     "\n",
-    "from ess.nmx.mtz_io import mtz_io_providers, mtz_io_params\n",
+    "from ess.nmx.mtz_io import providers as mtz_io_providers, default_parameters as mtz_io_params\n",
     "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
     "from ess.nmx.scaling import scaling_providers, scaling_params\n",
     "from ess.nmx.scaling import (\n",
