Use WavelengthBins instead of separate parameters for min, max and number of bins

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -73,13 +73,11 @@
     "import sciline as sl\n",
     "import scipp as sc\n",
     "\n",
-    "from ess.nmx.mtz_io import (\n",
-    "    providers as mtz_io_providers,\n",
-    "    default_parameters as mtz_io_params,\n",
-    ")\n",
+    "from ess.nmx.mtz_io import providers as mtz_io_providers, default_parameters as mtz_io_params\n",
     "from ess.nmx.mtz_io import SpaceGroupDesc\n",
-    "from ess.nmx.scaling import scaling_providers, scaling_params\n",
+    "from ess.nmx.scaling import providers as scaling_providers, default_parameters as scaling_params\n",
     "from ess.nmx.scaling import (\n",
+    "    WavelengthBins,\n",
     "    FilteredEstimatedScaledIntensities,\n",
     "    ReferenceWavelength,\n",
     "    ScaledIntensityLeftTailThreshold,\n",
@@ -101,6 +99,7 @@
     "        ),\n",
     "        **mtz_io_params,\n",
     "        **scaling_params,\n",
+    "        WavelengthBins: 250,\n",
     "    },\n",
     ")\n",
     "pl"
