refactor: add mcstas workflow, remove custom datastructures

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -21,27 +21,28 @@
    "source": [
     "import sciline as sl\n",
     "\n",
-    "from ess.nmx.mcstas_loader import providers as loader_providers\n",
-    "from ess.nmx.mcstas_xml import read_mcstas_geometry_xml\n",
+    "from ess.nmx.mcstas import McStasWorkflow\n",
     "from ess.nmx.data import small_mcstas_3_sample, small_mcstas_2_sample\n",
-    "from ess.nmx.types import *\n",
-    "from ess.nmx.reduction import NMXData, NMXReducedData, bin_time_of_arrival\n",
     "\n",
-    "pl = sl.Pipeline((*loader_providers, read_mcstas_geometry_xml, bin_time_of_arrival))\n",
+    "from ess.nmx.types import *\n",
+    "from ess.nmx.reduction import NMXData, NMXReducedData\n",
+    "from ess.nmx.nexus import export_as_nexus\n",
+    "\n",
+    "wf = McStasWorkflow()\n",
     "# Replace with the path to your own file\n",
-    "pl[FilePath] = small_mcstas_3_sample()\n",
-    "pl[MaximumProbability] = 10000\n",
-    "pl[TimeBinSteps] = 50\n",
+    "wf[FilePath] = small_mcstas_3_sample()\n",
+    "wf[MaximumProbability] = 10000\n",
+    "wf[TimeBinSteps] = 50\n",
     "# DetectorIndex selects what detector panels to include in the run\n",
     "# in this case we select all three panels.\n",
-    "pl.set_param_series(DetectorIndex, range(3))"
+    "wf.set_param_series(DetectorIndex, range(3))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see what the pipeline can produce, display it:"
+    "To see what the workflow can produce, display it:"
    ]
   },
   {
@@ -50,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pl"
+    "wf"
    ]
   },
   {
@@ -66,8 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nmx_workflow = pl.get(NMXReducedData)\n",
-    "nmx_workflow.visualize()"
+    "wf.visualize(NMXReducedData)"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "# Event data grouped by pixel id for each of the selected detectors\n",
-    "dg = nmx_workflow.compute(sl.Series[DetectorIndex, NMXData])\n",
+    "dg = wf.compute(sl.Series[DetectorIndex, NMXData])\n",
     "dg"
    ]
   },
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "# Data from all selected detectors binned by panel, pixel and timeslice\n",
-    "binned_dg = nmx_workflow.compute(NMXReducedData)\n",
+    "binned_dg = wf.compute(NMXReducedData)\n",
     "binned_dg"
    ]
   },
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#binned_dg.export_as_nexus('test.nxs')"
+    "export_as_nexus(binned_dg, 'test.nxs')"
    ]
   },
   {
