Update docs scaling workflow

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -61,11 +61,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import sciline as sl\n",
     "import scipp as sc\n",
     "\n",
     "from ess.nmx.mtz_io import providers as mtz_io_providers, default_parameters as mtz_io_params\n",
-    "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
+    "from ess.nmx.mtz_io import SpaceGroupDesc, SpaceGroup, get_unique_space_group, merge_mtz_dataframes, MtzDataFrame\n",
     "from ess.nmx.scaling import scaling_providers, scaling_params\n",
     "from ess.nmx.scaling import (\n",
     "    FilteredEstimatedScaledIntensities,\n",
@@ -91,15 +92,20 @@
     "        **scaling_params,\n",
     "    },\n",
     ")\n",
-    "\n",
-    "\n",
-    "file_path_table = sl.ParamTable(\n",
-    "    row_dim=MTZFileIndex,\n",
-    "    columns={MTZFilePath: get_small_random_mtz_samples()},\n",
-    ")\n",
-    "\n",
-    "pl.set_param_table(file_path_table)\n",
-    "pl"
+    "pl\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_paths = pd.DataFrame({MTZFilePath: get_small_random_mtz_samples()}).rename_axis(\"mtzfile\")\n",
+    "mapped = pl.map(file_paths)\n",
+    "pl[SpaceGroup] = mapped[SpaceGroup|None].reduce(index='mtzfile', func=get_unique_space_group)\n",
+    "pl[MtzDataFrame] = mapped[MtzDataFrame].reduce(index='mtzfile', func=merge_mtz_dataframes)"
    ]
   },
   {
@@ -374,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
