--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -19,13 +19,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import sciline as sl\n",
     "\n",
     "from ess.nmx.mcstas import McStasWorkflow\n",
     "from ess.nmx.data import small_mcstas_3_sample, small_mcstas_2_sample\n",
     "\n",
     "from ess.nmx.types import *\n",
-    "from ess.nmx.reduction import NMXData, NMXReducedData\n",
+    "from ess.nmx.reduction import NMXData, NMXReducedData, merge_panels\n",
     "from ess.nmx.nexus import export_as_nexus\n",
     "\n",
     "wf = McStasWorkflow()\n",
@@ -35,7 +36,11 @@
     "wf[TimeBinSteps] = 50\n",
     "# DetectorIndex selects what detector panels to include in the run\n",
     "# in this case we select all three panels.\n",
-    "wf.set_param_series(DetectorIndex, range(3))"
+    "wf[NMXReducedData] = (\n",
+    "    wf[NMXReducedData]\n",
+    "    .map(pd.DataFrame({DetectorIndex: range(3)}).rename_axis('panel'))\n",
+    "    .reduce(index='panel', func=merge_panels)\n",
+    ")\n"
    ]
   },
   {
@@ -83,8 +88,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from cyclebane.graph import NodeName, IndexValues\n",
     "# Event data grouped by pixel id for each of the selected detectors\n",
-    "dg = wf.compute(sl.Series[DetectorIndex, NMXData])\n",
+    "targets = [NodeName(NMXData, IndexValues(('panel',),(i,))) for i in range(3)]\n",
+    "dg = wf.compute(targets)\n",
     "dg"
    ]
   },
@@ -167,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
