--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -20,10 +20,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import sciline as sl\n",
     "\n",
     "from ess.nmx.mcstas import McStasWorkflow\n",
-    "from ess.nmx.data import small_mcstas_3_sample, small_mcstas_2_sample\n",
+    "from ess.nmx.data import small_mcstas_3_sample\n",
     "\n",
     "from ess.nmx.types import *\n",
     "from ess.nmx.reduction import NMXData, NMXReducedData, merge_panels\n",
@@ -33,14 +32,7 @@
     "# Replace with the path to your own file\n",
     "wf[FilePath] = small_mcstas_3_sample()\n",
     "wf[MaximumProbability] = 10000\n",
-    "wf[TimeBinSteps] = 50\n",
-    "# DetectorIndex selects what detector panels to include in the run\n",
-    "# in this case we select all three panels.\n",
-    "wf[NMXReducedData] = (\n",
-    "    wf[NMXReducedData]\n",
-    "    .map(pd.DataFrame({DetectorIndex: range(3)}).rename_axis('panel'))\n",
-    "    .reduce(index='panel', func=merge_panels)\n",
-    ")\n"
+    "wf[TimeBinSteps] = 50"
    ]
   },
   {
@@ -63,6 +55,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We want to reduce all three panels, so we map the relevant part of the workflow over a list of the three panels:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DetectorIndex selects what detector panels to include in the run\n",
+    "# in this case we select all three panels.\n",
+    "wf[NMXReducedData] = (\n",
+    "    wf[NMXReducedData]\n",
+    "    .map(pd.DataFrame({DetectorIndex: range(3)}).rename_axis(\"panel\"))\n",
+    "    .reduce(index=\"panel\", func=merge_panels)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Build Workflow"
    ]
   },
@@ -72,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wf.visualize(NMXReducedData)"
+    "wf.visualize(NMXReducedData, graph_attr={\"rankdir\": \"TD\"}, compact=True)"
    ]
   },
   {
@@ -89,9 +103,10 @@
    "outputs": [],
    "source": [
     "from cyclebane.graph import NodeName, IndexValues\n",
+    "\n",
     "# Event data grouped by pixel id for each of the selected detectors\n",
-    "targets = [NodeName(NMXData, IndexValues(('panel',),(i,))) for i in range(3)]\n",
-    "dg = wf.compute(targets)\n",
+    "targets = [NodeName(NMXData, IndexValues((\"panel\",), (i,))) for i in range(3)]\n",
+    "dg = merge_panels(*wf.compute(targets).values())\n",
     "dg"
    ]
   },
@@ -123,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_as_nexus(binned_dg, 'test.nxs')"
+    "export_as_nexus(binned_dg, \"test.nxs\")"
    ]
   },
   {
@@ -149,11 +164,10 @@
    "source": [
     "import scippneutron as scn\n",
     "\n",
-    "da = dg[0]['weights']\n",
-    "da.coords['position'] = dg[0]['position']['panel', 0]\n",
+    "da = dg[\"weights\"]\n",
+    "da.coords[\"position\"] = dg[\"position\"]\n",
     "# Plot one out of 100 pixels to reduce size of docs output\n",
-    "view = scn.instrument_view(da['id', ::100].hist(), pixel_size=0.0075)\n",
-    "view.children[0].toolbar.cameraz()\n",
+    "view = scn.instrument_view(da[\"id\", ::100].hist(), pixel_size=0.0075)\n",
     "view"
    ]
   }
