--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -29,7 +29,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.mtz_io import read_mtz_file, mtz_to_pandas, MTZFilePath\n",
+    "import gemmi\n",
+    "from ess.nmx.mtz_io import (\n",
+    "    read_mtz_file,\n",
+    "    mtz_to_pandas,\n",
+    "    MTZFilePath,\n",
+    "    get_unique_space_group,\n",
+    "    MtzDataFrame,\n",
+    "    merge_mtz_dataframes,\n",
+    ")\n",
     "from ess.nmx.data import get_small_random_mtz_samples\n",
     "\n",
     "\n",
@@ -65,8 +73,11 @@
     "import sciline as sl\n",
     "import scipp as sc\n",
     "\n",
-    "from ess.nmx.mtz_io import providers as mtz_io_providers, default_parameters as mtz_io_params\n",
-    "from ess.nmx.mtz_io import SpaceGroupDesc, SpaceGroup, get_unique_space_group, merge_mtz_dataframes, MtzDataFrame\n",
+    "from ess.nmx.mtz_io import (\n",
+    "    providers as mtz_io_providers,\n",
+    "    default_parameters as mtz_io_params,\n",
+    ")\n",
+    "from ess.nmx.mtz_io import SpaceGroupDesc\n",
     "from ess.nmx.scaling import scaling_providers, scaling_params\n",
     "from ess.nmx.scaling import (\n",
     "    FilteredEstimatedScaledIntensities,\n",
@@ -92,8 +103,7 @@
     "        **scaling_params,\n",
     "    },\n",
     ")\n",
-    "pl\n",
-    "\n"
+    "pl"
    ]
   },
   {
@@ -102,10 +112,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_paths = pd.DataFrame({MTZFilePath: get_small_random_mtz_samples()}).rename_axis(\"mtzfile\")\n",
+    "file_paths = pd.DataFrame({MTZFilePath: get_small_random_mtz_samples()}).rename_axis(\n",
+    "    \"mtzfile\"\n",
+    ")\n",
     "mapped = pl.map(file_paths)\n",
-    "pl[SpaceGroup] = mapped[SpaceGroup|None].reduce(index='mtzfile', func=get_unique_space_group)\n",
-    "pl[MtzDataFrame] = mapped[MtzDataFrame].reduce(index='mtzfile', func=merge_mtz_dataframes)"
+    "pl[gemmi.SpaceGroup] = mapped[gemmi.SpaceGroup | None].reduce(\n",
+    "    index='mtzfile', func=get_unique_space_group\n",
+    ")\n",
+    "pl[MtzDataFrame] = mapped[MtzDataFrame].reduce(\n",
+    "    index='mtzfile', func=merge_mtz_dataframes\n",
+    ")"
    ]
   },
   {
