Use Scipp instead of Pandas

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -19,8 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "from ess.nmx.mcstas import McStasWorkflow\n",
     "from ess.nmx.data import small_mcstas_3_sample\n",
     "\n",
@@ -68,7 +66,7 @@
     "# in this case we select all three panels.\n",
     "wf[NMXReducedData] = (\n",
     "    wf[NMXReducedData]\n",
-    "    .map(pd.DataFrame({DetectorIndex: range(3)}).rename_axis(\"panel\"))\n",
+    "    .map({DetectorIndex: sc.arange('panel', 3, unit=None)})\n",
     "    .reduce(index=\"panel\", func=merge_panels)\n",
     ")"
    ]
