Fix all errors.

--- a/docs/developer/test-dataset.ipynb
+++ b/docs/developer/test-dataset.ipynb
@@ -48,13 +48,16 @@
     "    DEFAULT_STD_DEV_COLUMN_NAME,  # SIGI\n",
     ")\n",
     "global_rng = np.random.default_rng(0)\n",
-    "HKL_CANDIDATES = tuple(zip(*[global_rng.integers(*HKL_RANGE, size=100) for _ in range(3)]))\n",
+    "HKL_CANDIDATES = tuple(\n",
+    "    zip(*[global_rng.integers(*HKL_RANGE, size=100) for _ in range(3)], strict=False)\n",
+    ")\n",
     "\n",
     "def create_mtz_data_frame(random_seed: int) -> pd.DataFrame:\n",
     "    rng = np.random.default_rng(random_seed)\n",
-    "    intensities = np.sort(rng.normal(50, 20, size=10_000))[::-1] + (rng.uniform(\n",
-    "        *INTENSITY_RANGE, size=10_000\n",
-    "    )* rng.choice([0]*99 + [1], size=10_000))\n",
+    "    intensities = np.sort(rng.normal(50, 20, size=10_000))[::-1] + (\n",
+    "        rng.uniform(*INTENSITY_RANGE, size=10_000)\n",
+    "        * rng.choice([0] * 99 + [1], size=10_000)\n",
+    "    )\n",
     "    std_devs = np.multiply(intensities, rng.uniform(0.1, 0.15, size=10_000))\n",
     "    wavelengths = np.sort(rng.uniform(2.8, 3.2, size=10_000))[::-1]\n",
     "\n",
@@ -65,7 +68,7 @@
     "            DEFAULT_WAVELENGTH_COLUMN_NAME: wavelengths,\n",
     "        }\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    df[[\"H\", \"K\", \"L\"]] = pd.Series(\n",
     "        rng.choice(HKL_CANDIDATES, size=10_000).tolist()\n",
     "    ).to_list()\n",
