Add explanation in the comment of the bin edge parameter.

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -73,9 +73,15 @@
     "import sciline as sl\n",
     "import scipp as sc\n",
     "\n",
-    "from ess.nmx.mtz_io import providers as mtz_io_providers, default_parameters as mtz_io_params\n",
+    "from ess.nmx.mtz_io import (\n",
+    "    providers as mtz_io_providers,\n",
+    "    default_parameters as mtz_io_params,\n",
+    ")\n",
     "from ess.nmx.mtz_io import SpaceGroupDesc\n",
-    "from ess.nmx.scaling import providers as scaling_providers, default_parameters as scaling_params\n",
+    "from ess.nmx.scaling import (\n",
+    "    providers as scaling_providers,\n",
+    "    default_parameters as scaling_params,\n",
+    ")\n",
     "from ess.nmx.scaling import (\n",
     "    WavelengthBins,\n",
     "    FilteredEstimatedScaledIntensities,\n",
@@ -99,7 +105,9 @@
     "        ),\n",
     "        **mtz_io_params,\n",
     "        **scaling_params,\n",
-    "        WavelengthBins: 250,\n",
+    "        # Be careful with the number of bins, it can make the fitting fail\n",
+    "        # if the range/number of bins are not optimal\n",
+    "        WavelengthBins: sc.linspace(\"wavelength\", 2.8, 3.2, 250, unit=\"angstrom\"),\n",
     "    },\n",
     ")\n",
     "pl"
@@ -220,13 +228,8 @@
    "outputs": [],
    "source": [
     "import plopp as pp\n",
-    "import numpy as np\n",
     "from ess.nmx.scaling import FittingResult\n",
     "\n",
-    "chebyshev_func = np.polynomial.chebyshev.Chebyshev(np.array([1, -1, 1]))\n",
-    "scale_function = np.vectorize(\n",
-    "    chebyshev_func / chebyshev_func(results[SelectedReferenceWavelength].value)\n",
-    ")\n",
     "pp.plot(\n",
     "    {\n",
     "        \"Original Data\": results[FilteredEstimatedScaledIntensities],\n",
@@ -234,8 +237,8 @@
     "    },\n",
     "    grid=True,\n",
     "    title=\"Fit Result [Intensities vs Wavelength]\",\n",
-    "    marker={\"Chebyshev\": None, \"Fit Result\": None},\n",
-    "    linestyle={\"Chebyshev\": \"solid\", \"Fit Result\": \"solid\"},\n",
+    "    marker={\"Fit Result\": None},\n",
+    "    linestyle={\"Fit Result\": \"solid\"},\n",
     ")"
    ]
   },
