--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -24,7 +24,8 @@
     "\n",
     "from ess.nmx.types import *\n",
     "from ess.nmx.reduction import NMXData, NMXReducedData, merge_panels\n",
-    "from ess.nmx.nexus import export_as_nexus\n",
+    "from ess.nmx.types import DetectorIndex\n",
+    "\n",
     "\n",
     "wf = McStasWorkflow()\n",
     "# Replace with the path to your own file\n",
@@ -57,18 +58,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "If you want to reduce all three panels,\n",
+    "map the relevant part of the workflow over a list of the three panels:\n",
+    "\n",
+    "```python\n",
     "# DetectorIndex selects what detector panels to include in the run\n",
     "# in this case we select all three panels.\n",
     "wf[NMXReducedData] = (\n",
     "    wf[NMXReducedData]\n",
     "    .map({DetectorIndex: sc.arange('panel', 3, unit=None)})\n",
     "    .reduce(index=\"panel\", func=merge_panels)\n",
-    ")"
+    ")\n",
+    "```\n",
+    "\n",
+    "However, we encountered memory issue processing dataset, which is often over 10GB.\n",
+    "Therefore we will not merge the panels at the end of the workflow\n",
+    "and iter over the detector index instead."
    ]
   },
   {
@@ -100,12 +108,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cyclebane.graph import NodeName, IndexValues\n",
+    "import sciline as sl\n",
+    "from contextlib import contextmanager\n",
+    "from collections.abc import Generator\n",
     "\n",
-    "# Event data grouped by pixel id for each of the selected detectors\n",
-    "targets = [NodeName(NMXData, IndexValues((\"panel\",), (i,))) for i in range(3)]\n",
-    "dg = merge_panels(*wf.compute(targets).values())\n",
-    "dg"
+    "\n",
+    "@contextmanager\n",
+    "def temp_parameter(\n",
+    "    wf: sl.Pipeline, parameter_type: type, value: Any\n",
+    ") -> Generator[sl.Pipeline]:\n",
+    "    copied = wf.copy()\n",
+    "    copied[parameter_type] = value\n",
+    "    yield copied\n",
+    "    del copied"
    ]
   },
   {
@@ -114,8 +129,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data from all selected detectors binned by panel, pixel and timeslice\n",
-    "binned_dg = wf.compute(NMXReducedData)\n",
+    "# Data from the first detector binned by panel, pixel and timeslice\n",
+    "with temp_parameter(wf, DetectorIndex, 0) as temp_wf:\n",
+    "    binned_dg = temp_wf.compute(NMXReducedData)\n",
+    "\n",
     "binned_dg"
    ]
   },
@@ -136,7 +153,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_as_nexus(binned_dg, \"test.nxs\")"
+    "from ess.nmx.nexus import export_as_nxlauetof\n",
+    "\n",
+    "dgs = []\n",
+    "for i in range(3):\n",
+    "    with temp_parameter(wf, DetectorIndex, i) as temp_wf:\n",
+    "        reduced_data = temp_wf.compute(NMXReducedData)\n",
+    "        dgs.append(reduced_data)\n",
+    "        del reduced_data\n",
+    "\n",
+    "export_as_nxlauetof(*dgs, output_file=\"test.nxs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dgs[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Legacy version of the exporting method\n",
+    "```python\n",
+    "from ess.nmx.nexus import export_as_nexus\n",
+    "\n",
+    "export_as_nexus(binned_dg, \"test.nxs\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merge All Panels\n",
+    "\n",
+    "If you simply want to compute all panels at once, you can use map/reduce on the workflow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_wf = wf.copy()\n",
+    "detector_panel_ids = {DetectorIndex: sc.arange('panel', 3, unit=None)}\n",
+    "pipeline = base_wf.map(detector_panel_ids)\n",
+    "pipeline.visualize(\n",
+    "    sl.get_mapped_node_names(pipeline, NMXData),\n",
+    "    compact=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dg = merge_panels(\n",
+    "    *pipeline.compute(sl.get_mapped_node_names(pipeline, NMXData)).values()\n",
+    ")\n",
+    "dg"
    ]
   },
   {
@@ -172,7 +255,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "nmx-dev-310",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
