Flatten function calls in the example.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -153,25 +153,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.nexus import export_as_nxlauetof\n",
+    "from ess.nmx.nexus import (\n",
+    "    export_panel_dependent_data_as_nxlauetof,\n",
+    "    export_panel_independent_data_as_nxlauetof,\n",
+    ")\n",
     "\n",
-    "dgs = []\n",
-    "for i in range(3):\n",
+    "file_name = \"test.nxs\"\n",
+    "export_panel_independent_data_as_nxlauetof(binned_dg, output_file=file_name)\n",
+    "export_panel_dependent_data_as_nxlauetof(binned_dg, output_file=file_name)\n",
+    "del binned_dg\n",
+    "\n",
+    "for i in range(1, 3):\n",
     "    with temp_parameter(wf, DetectorIndex, i) as temp_wf:\n",
     "        reduced_data = temp_wf.compute(NMXReducedData)\n",
-    "        dgs.append(reduced_data)\n",
-    "        del reduced_data\n",
-    "\n",
-    "export_as_nxlauetof(*dgs, output_file=\"test.nxs\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dgs[0]"
+    "        export_panel_dependent_data_as_nxlauetof(reduced_data, output_file=file_name)\n",
+    "        del reduced_data\n"
    ]
   },
   {
