Add chunk workflow.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -23,14 +23,14 @@
     "from ess.nmx.data import small_mcstas_3_sample\n",
     "\n",
     "from ess.nmx.types import *\n",
-    "from ess.nmx.reduction import NMXData, NMXReducedData, merge_panels\n",
+    "from ess.nmx.reduction import NMXReducedData, merge_panels\n",
     "from ess.nmx.types import DetectorIndex\n",
     "\n",
     "\n",
     "wf = McStasWorkflow()\n",
     "# Replace with the path to your own file\n",
     "wf[FilePath] = small_mcstas_3_sample()\n",
-    "wf[MaximumProbability] = 10000\n",
+    "wf[MaximumCounts] = 10000\n",
     "wf[TimeBinSteps] = 50"
    ]
   },
@@ -201,7 +201,7 @@
     "detector_panel_ids = {DetectorIndex: sc.arange('panel', 3, unit=None)}\n",
     "pipeline = base_wf.map(detector_panel_ids)\n",
     "pipeline.visualize(\n",
-    "    sl.get_mapped_node_names(pipeline, NMXData),\n",
+    "    sl.get_mapped_node_names(pipeline, NMXRawData),\n",
     "    compact=True,\n",
     ")"
    ]
@@ -213,7 +213,7 @@
    "outputs": [],
    "source": [
     "dg = merge_panels(\n",
-    "    *pipeline.compute(sl.get_mapped_node_names(pipeline, NMXData)).values()\n",
+    "    *pipeline.compute(sl.get_mapped_node_names(pipeline, NMXRawData)).values()\n",
     ")\n",
     "dg"
    ]
