Rename example file name to be h5 so that other programs can easily read it.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "``NMXReducedData`` object has a method to export the data into nexus or h5 file.\n",
     "\n",
-    "You can save the result as ``test.nxs``, for example:\n"
+    "You can save the result as ``test.h5``, for example:\n"
    ]
   },
   {
@@ -158,7 +158,7 @@
     "    export_panel_independent_data_as_nxlauetof,\n",
     ")\n",
     "\n",
-    "file_name = \"test.nxs\"\n",
+    "file_name = \"test.h5\"\n",
     "export_panel_independent_data_as_nxlauetof(binned_dg, output_file=file_name)\n",
     "export_panel_dependent_data_as_nxlauetof(binned_dg, output_file=file_name)\n",
     "del binned_dg\n",
@@ -178,7 +178,7 @@
     "```python\n",
     "from ess.nmx.nexus import export_as_nexus\n",
     "\n",
-    "export_as_nexus(binned_dg, \"test.nxs\")\n",
+    "export_as_nexus(binned_dg, \"test.h5\")\n",
     "```"
    ]
   },
