Dataset automatic chunk reading option.

--- a/docs/examples/workflow_chunk.ipynb
+++ b/docs/examples/workflow_chunk.ipynb
@@ -69,6 +69,7 @@
     "\n",
     "class MaxAccumulator(Accumulator):\n",
     "    \"\"\"Accumulator that keeps track of the maximum value seen so far.\"\"\"\n",
+    "\n",
     "    def __init__(self, **kwargs: Any) -> None:\n",
     "        super().__init__(**kwargs)\n",
     "        self._cur_max: sc.Variable | None = None\n",
@@ -158,9 +159,13 @@
     ")\n",
     "\n",
     "FINE_NAME = \"test.h5\"\n",
-    "CHUNK_SIZE = 100  # Number of event rows to process at once\n",
+    "CHUNK_SIZE = 100_000  # Number of event rows to process at once\n",
     "# Increase this number to speed up the processing\n",
     "NUM_DETECTORS = 3  # Normally 3, but we only have 1 in the small sample\n",
+    "wf[TimeBinSteps] = sc.linspace('t', 0.1, 0.15, 51, unit='s')  # Time bin edges can be calculated from the data\n",
+    "                # But streaming processor only sees the first chunk\n",
+    "                # So we need to set it manually before processing the first chunk\n",
+    "                # It is a bit cumbersome since we have to know the range of the time bins in advance\n",
     "\n",
     "# Loop over the detectors\n",
     "for i in range(0, NUM_DETECTORS):\n",
@@ -181,7 +186,7 @@
     "        file_path=FilePath(small_mcstas_3_sample()),\n",
     "        bank_prefix=prefix,\n",
     "        pixel_ids=pixel_ids,\n",
-    "        chunk_size=100,\n",
+    "        chunk_size=CHUNK_SIZE,\n",
     "    ):\n",
     "        if any(da.sizes.values()) == 0:\n",
     "            continue\n",
@@ -195,16 +200,19 @@
     "        instrument=mcstas_geo,\n",
     "        crystal_rotation=crystal_rotation,\n",
     "    )\n",
-    "    # Replace the time bin steps with the first set of time bins\n",
-    "    # This might exclude some time bins if the first set is not complete\n",
-    "    # Better to set it manually as a parameter but it is not possible\n",
-    "    # to enforce the user to set it as an array when using the streaming processor\n",
-    "    wf[TimeBinSteps] = reduced['counts'].coords['t']\n",
     "    # Export each panel to the same file\n",
     "    if not pathlib.Path(FINE_NAME).exists() or i == 0:\n",
     "        export_panel_independent_data_as_nxlauetof(reduced, output_file=FINE_NAME)\n",
-    "    export_panel_dependent_data_as_nxlauetof(reduced, output_file=FINE_NAME)\n",
-    "    del reduced\n"
+    "    export_panel_dependent_data_as_nxlauetof(reduced, output_file=FINE_NAME)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced['counts'].sum('id').plot(title=\"Time of arrival counts (integrated pixels).\")"
    ]
   }
  ],
