--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -29,7 +29,7 @@
     "wf = McStasWorkflow()\n",
     "# Replace with the path to your own file\n",
     "wf[FilePath] = small_mcstas_3_sample()\n",
-    "wf[MaximumProbability] = 10000\n",
+    "wf[MaximumCounts] = 10000\n",
     "wf[TimeBinSteps] = 50"
    ]
   },
@@ -172,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "nmx-dev-310",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
