Update workflow to have more granular steps.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -23,7 +23,7 @@
     "from ess.nmx.data import small_mcstas_3_sample\n",
     "\n",
     "from ess.nmx.types import *\n",
-    "from ess.nmx.reduction import NMXData, NMXReducedData, merge_panels\n",
+    "from ess.nmx.reduction import merge_panels\n",
     "from ess.nmx.nexus import export_as_nexus\n",
     "\n",
     "wf = McStasWorkflow()\n",
@@ -64,8 +64,8 @@
    "source": [
     "# DetectorIndex selects what detector panels to include in the run\n",
     "# in this case we select all three panels.\n",
-    "wf[NMXReducedData] = (\n",
-    "    wf[NMXReducedData]\n",
+    "wf[NMXReducedDataGroup] = (\n",
+    "    wf[NMXReducedDataGroup]\n",
     "    .map({DetectorIndex: sc.arange('panel', 3, unit=None)})\n",
     "    .reduce(index=\"panel\", func=merge_panels)\n",
     ")"
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wf.visualize(NMXReducedData, graph_attr={\"rankdir\": \"TD\"}, compact=True)"
+    "wf.visualize(NMXReducedDataGroup, graph_attr={\"rankdir\": \"TD\"}, compact=True)"
    ]
   },
   {
@@ -102,8 +102,8 @@
    "source": [
     "from cyclebane.graph import NodeName, IndexValues\n",
     "\n",
-    "# Event data grouped by pixel id for each of the selected detectors\n",
-    "targets = [NodeName(NMXData, IndexValues((\"panel\",), (i,))) for i in range(3)]\n",
+    "# Data from all selected detectors binned by panel, pixel and timeslice\n",
+    "targets = [NodeName(NMXReducedDataGroup, IndexValues((\"panel\",), (i,))) for i in range(3)]\n",
     "dg = merge_panels(*wf.compute(targets).values())\n",
     "dg"
    ]
@@ -114,9 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data from all selected detectors binned by panel, pixel and timeslice\n",
-    "binned_dg = wf.compute(NMXReducedData)\n",
-    "binned_dg"
+    "dg['counts']"
    ]
   },
   {
@@ -136,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_as_nexus(binned_dg, \"test.nxs\")"
+    "export_as_nexus(dg, \"test.nxs\")"
    ]
   },
   {
@@ -162,10 +160,10 @@
    "source": [
     "import scippneutron as scn\n",
     "\n",
-    "da = dg[\"weights\"]\n",
+    "da = dg[\"counts\"]\n",
     "da.coords[\"position\"] = dg[\"position\"]\n",
     "# Plot one out of 100 pixels to reduce size of docs output\n",
-    "view = scn.instrument_view(da[\"id\", ::100].hist(), pixel_size=0.0075)\n",
+    "view = scn.instrument_view(da[\"id\", ::100].sum('t'), pixel_size=0.0075)\n",
     "view"
    ]
   }
