Use python min.

--- a/docs/examples/workflow_chunk.ipynb
+++ b/docs/examples/workflow_chunk.ipynb
@@ -126,7 +126,7 @@
     "    scale_factors[detector_i] = results[McStasWeight2CountScaleFactor]\n",
     "\n",
     "# We take the minimum scale factor for the entire dataset\n",
-    "scale_factor = sc.concat([*scale_factors.values()], dim='panel').min()\n",
+    "scale_factor = min(scale_factors.values())\n",
     "scale_factor\n"
    ]
   },
