--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chunk Workflow\n",
+    "# Workflow - Chunk by Chunk\n",
     "In this example, we will process McStas events chunk by chunk, panel by panel."
    ]
   },
