Add raw data metadata retrieval part.

--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -37,17 +37,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute Maximum Probabiliity\n",
+    "## Compute Raw Data Metadata\n",
     "\n",
-    "`McStasWeight2CountScaleFactor` should not be different from chunk to chunk.\n",
+    "`time-of-flight` coordinate and `McStasWeight2CountScaleFactor` should not be different from chunk to chunk.\n",
     "\n",
-    "Therefore we need to compute `McStasWeight2CoutScaleFactor` before we compute `NMXReducedDataGroup`.\n",
+    "Therefore we need to compute `TimeBinStep` and `McStasWeight2CoutScaleFactor` before we compute `NMXReducedData`.\n",
     "\n",
     "It can be done by `ess.reduce.streaming.StreamProcessor`.\n",
     "\n",
-    "In this example, `MaximumProbability` will be renewed every time a chunk is added to the streaming processor.\n",
+    "In this example, `MinimumTimeOfArrival`, `MaximumTimeOfArrival` and `MaximumProbability` will be renewed every time a chunk is added to the streaming processor.\n",
     "\n",
-    "`MaxAccumulator` remembers the previous maximum value and compute new maximum value with the new chunk.\n",
+    "`(Min/Max)Accumulator` remembers the previous minimum/maximum value and compute new minimum/maximum value with the new chunk.\n",
     "\n",
     "``raw_event_data_chunk_generator`` yields a chunk of raw event probability from mcstas h5 file.\n",
     "\n",
@@ -62,16 +62,20 @@
    "source": [
     "from functools import partial\n",
     "from ess.reduce.streaming import StreamProcessor\n",
-    "from ess.nmx.streaming import MaxAccumulator\n",
+    "from ess.nmx.streaming import MaxAccumulator, MinAccumulator\n",
     "\n",
     "# Stream processor building helper\n",
     "scalefactor_stream_processor = partial(\n",
     "    StreamProcessor,\n",
     "    dynamic_keys=(RawEventProbability,),\n",
-    "    target_keys=(McStasWeight2CountScaleFactor,),\n",
-    "    accumulators={MaximumProbability: MaxAccumulator},\n",
+    "    target_keys=(NMXRawDataMetadata,),\n",
+    "    accumulators={\n",
+    "        MaximumProbability: MaxAccumulator,\n",
+    "        MaximumTimeOfArrival: MaxAccumulator,\n",
+    "        MinimumTimeOfArrival: MinAccumulator,\n",
+    "    },\n",
     ")\n",
-    "scalefactor_wf = wf.copy()"
+    "metadata_wf = wf.copy()"
    ]
   },
   {
@@ -80,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scalefactor_wf.visualize(McStasWeight2CountScaleFactor, graph_attr={\"rankdir\": \"TD\"}, compact=True)"
+    "metadata_wf.visualize(NMXRawDataMetadata, graph_attr={\"rankdir\": \"TD\"}, compact=True)"
    ]
   },
   {
@@ -90,7 +94,10 @@
    "outputs": [],
    "source": [
     "from ess.nmx.types import DetectorName\n",
-    "from ess.nmx.mcstas.load import raw_event_data_chunk_generator\n",
+    "from ess.nmx.mcstas.load import (\n",
+    "    raw_event_data_chunk_generator,\n",
+    "    mcstas_weight_to_probability_scalefactor,\n",
+    ")\n",
     "from ess.nmx.streaming import calculate_number_of_chunks\n",
     "from ipywidgets import IntProgress\n",
     "\n",
@@ -99,10 +106,11 @@
     "NUM_DETECTORS = 3\n",
     "\n",
     "# Loop over the detectors\n",
-    "file_path = scalefactor_wf.compute(FilePath)\n",
-    "scale_factors = {}\n",
+    "file_path = metadata_wf.compute(FilePath)\n",
+    "raw_data_metadatas = {}\n",
+    "\n",
     "for detector_i in range(0, NUM_DETECTORS):\n",
-    "    temp_wf = scalefactor_wf.copy()\n",
+    "    temp_wf = metadata_wf.copy()\n",
     "    temp_wf[DetectorIndex] = detector_i\n",
     "    detector_name = temp_wf.compute(DetectorName)\n",
     "    max_chunk_id = calculate_number_of_chunks(\n",
@@ -123,11 +131,18 @@
     "        else:\n",
     "            results = processor.add_chunk({RawEventProbability: da})\n",
     "        cur_detector_progress_bar.value += 1\n",
-    "    scale_factors[detector_i] = results[McStasWeight2CountScaleFactor]\n",
+    "    display(results[NMXRawDataMetadata])\n",
+    "    raw_data_metadatas[detector_i] = results[NMXRawDataMetadata]\n",
     "\n",
-    "# We take the minimum scale factor for the entire dataset\n",
-    "scale_factor = min(scale_factors.values())\n",
-    "scale_factor\n"
+    "# We take the min/maximum values of the scale factor\n",
+    "min_toa = min(dg['min_toa'] for dg in raw_data_metadatas.values())\n",
+    "max_toa = max(dg['max_toa'] for dg in raw_data_metadatas.values())\n",
+    "max_probability = max(dg['max_probability'] for dg in raw_data_metadatas.values())\n",
+    "\n",
+    "toa_bin_edges = sc.linspace(dim='t', start=min_toa, stop=max_toa, num=51)\n",
+    "scale_factor = mcstas_weight_to_probability_scalefactor(\n",
+    "    max_counts=wf.compute(MaximumCounts), max_probability=max_probability\n",
+    ")"
    ]
   },
   {
@@ -150,15 +165,14 @@
     "from ess.nmx.mcstas.xml import McStasInstrument\n",
     "\n",
     "final_wf = wf.copy()\n",
-    "# Add the scale factor to the workflow\n",
+    "# Set the scale factor and time bin edges\n",
     "final_wf[McStasWeight2CountScaleFactor] = scale_factor\n",
+    "final_wf[TimeBinSteps] = toa_bin_edges\n",
     "\n",
-    "# Compute the static information in advance\n",
-    "# static_info = wf.compute([CrystalRotation, McStasInstrument])\n",
-    "static_info = wf.compute([McStasInstrument])\n",
-    "# final_wf[CrystalRotation] = static_info[CrystalRotation]\n",
-    "final_wf[CrystalRotation] = sc.vector([0, 0, 0.,], unit='deg')\n",
-    "final_wf[McStasInstrument] = static_info[McStasInstrument]\n",
+    "# Set the crystal rotation manually for now ...\n",
+    "final_wf[CrystalRotation] = sc.vector([0, 0, 0.0], unit='deg')\n",
+    "# Set static info\n",
+    "final_wf[McStasInstrument] = wf.compute(McStasInstrument)\n",
     "final_wf.visualize(NMXReducedDataGroup, compact=True)"
    ]
   },
