Lauetof export interface.

--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -149,11 +149,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Compute Metadata\n",
+    "\n",
+    "Other metadata does not require any chunk-based computation.\n",
+    "\n",
+    "Therefore we export the metadata first and append detector data later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ess.nmx.nexus import export_metadata_as_nxlauetof\n",
+    "\n",
+    "output_file = \"test.h5\"\n",
+    "experiment_metadata = wf.compute(NMXExperimentMetadata)\n",
+    "detector_metas = []\n",
+    "for detector_i in range(3):\n",
+    "    temp_wf = wf.copy()\n",
+    "    temp_wf[DetectorIndex] = detector_i\n",
+    "    detector_metas.append(temp_wf.compute(NMXDetectorMetadata))\n",
+    "\n",
+    "export_metadata_as_nxlauetof(\n",
+    "    experiment_metadata, *detector_metas, output_file=output_file\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Compute Final Output\n",
     "\n",
-    "Now with the `scale_factor: McStasWeight2CountScaleFactor`, we can compute the final output chunk by chunk.\n",
+    "Now with all the metadata, we can compute the final output chunk by chunk.\n",
     "\n",
-    "We will also compute static parameters in advance so that stream processor does not compute them every time another chunk is added."
+    "We will also compute static parameters in advance so that stream processor does not compute them every time another chunk is added.\n",
+    "\n",
+    "We will as well export the reduced data detector by detector."
    ]
   },
   {
@@ -204,6 +238,7 @@
     "from ess.nmx.mcstas.load import raw_event_data_chunk_generator\n",
     "from ess.nmx.streaming import calculate_number_of_chunks\n",
     "from ipywidgets import IntProgress\n",
+    "from ess.nmx.nexus import export_reduced_data_as_nxlauetof\n",
     "\n",
     "CHUNK_SIZE = 10  # Number of event rows to process at once\n",
     "# Increase this number to speed up the processing\n",
@@ -243,7 +278,8 @@
     "        cur_detector_progress_bar.value += 1\n",
     "\n",
     "    result = results[NMXReducedDataGroup]\n",
-    "    display(result)\n"
+    "    display(result)\n",
+    "    export_reduced_data_as_nxlauetof(result, output_file=output_file)\n"
    ]
   }
  ],
