Raw data metadata as dataclass

--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -135,9 +135,9 @@
     "    raw_data_metadatas[detector_i] = results[NMXRawDataMetadata]\n",
     "\n",
     "# We take the min/maximum values of the scale factor\n",
-    "min_toa = min(dg['min_toa'] for dg in raw_data_metadatas.values())\n",
-    "max_toa = max(dg['max_toa'] for dg in raw_data_metadatas.values())\n",
-    "max_probability = max(dg['max_probability'] for dg in raw_data_metadatas.values())\n",
+    "min_toa = min(meta.min_toa for meta in raw_data_metadatas.values())\n",
+    "max_toa = max(meta.max_toa for meta in raw_data_metadatas.values())\n",
+    "max_probability = max(meta.max_probability for meta in raw_data_metadatas.values())\n",
     "\n",
     "toa_bin_edges = sc.linspace(dim='t', start=min_toa, stop=max_toa, num=51)\n",
     "scale_factor = mcstas_weight_to_probability_scalefactor(\n",
