Allow arbitrary metadata and export time of flight from the coordinate.

--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -173,7 +173,11 @@
     "    detector_metas.append(temp_wf.compute(NMXDetectorMetadata))\n",
     "\n",
     "export_metadata_as_nxlauetof(\n",
-    "    experiment_metadata, *detector_metas, output_file=output_file\n",
+    "    *detector_metas,\n",
+    "    experiment_metadata=experiment_metadata,\n",
+    "    output_file=output_file,\n",
+    "    # Arbitrary metadata falls into ``entry`` group as a variable.\n",
+    "    mcstas_weight2count_scale_factor=scale_factor,\n",
     ")"
    ]
   },
