Data reduction script interface.

--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -12,6 +12,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# TL;DR\n",
+    "\n",
+    "There is a reduction script that process the dataset chunk by chunk.\n",
+    "\n",
+    "> It may have some hard-coded parameters due to unfinished work on the reduction workflow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from ess.nmx.data import small_mcstas_3_sample\n",
+    "\n",
+    "os.environ['INTPUT_FILE_PATH'] = small_mcstas_3_sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!essnmx_reduce_mcstas \\\n",
+    "    --input_file ${INTPUT_FILE_PATH} \\\n",
+    "    --output_file script-test.h5 \\\n",
+    "    --verbose \\\n",
+    "    --chunk_size 10_000_000 \\\n",
+    "    --detector_ids 0 1 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Build Base Workflow"
    ]
   },
